# cli-ai

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: upload_to_pip.yaml
cli/: app.py  command_parser.py  main.py
core/: baseexecuter.py  basellm.py  basemessage.py  basemodel.py  baseoutput.py  basepermission.py  bashcode.py  prompts.py
core/executor/: base_executor.py  sequential_shell_executor.py  simple_executor.py
llms/: __init__.py  arlillm.py  cerebrasllm.py  googlellm.py  groqllm.py  litellmllm.py  model.py  ollamallm.py  openaillm.py  prompt_builder.py  testllm.py  utils.py
sample/: sample.py
tests/: test_cli.py  test_command_execution.py  test_llm.py  test_utils.py
utils/: exceptions.py  logger.py
