[tool.poetry]
name = "cli-agent"
version = "0.1.2"
description = "AI for CLI"
authors = ["tikendraw <tikendraksahu1029@gmail.com>"]
readme = "README.md"
packages = [
    { include = "cli" },
    { include = "core" },
    { include = "llms" },
    { include = "utils" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
termcolor = "^2.4.0"
groq = "^0.11.0"
ollama = "^0.3.2"
click = "^8.1.7"
cerebras-cloud-sdk = "^1.2.0"
google-generativeai = "^0.8.0"
litellm = "^1.45.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ci = "cli.main:run"
cli = "cli.main:cli"
